# Kickstart

./: .coverage  .gitignore  CLAUDE.md  README.md  SCOPE.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docker/: Dockerfile.api  Dockerfile.dashboard  compose.yaml
docs/: api.md  architecture.md  methodology.md
packs/world_cup_2026/: backtests.yaml  bracket_allocation.yaml  competitions.yaml  format.yaml  sources.yaml  teams.yaml
src/engine/: __init__.py  cli.py
src/engine/api/: app.py  schemas.py
src/engine/core/: config.py  registry.py  schema.py
src/engine/dashboard/: app.py
src/engine/evaluation/: metrics.py  promotion.py  tracking.py  walk_forward.py
src/engine/explain/: shap_explain.py
src/engine/ingestion/: base.py  csv_adapter.py  pipeline.py
src/engine/models/: base.py  baselines.py  calibration.py  features.py  ladder.py  rung0.py  rung1.py  rung2.py
src/engine/ratings/: attack_defence.py  elo.py  form.py  pipeline.py  store.py
src/engine/simulation/: format.py  interpreter.py  monte_carlo.py  pipeline.py  sampler.py  state.py
src/engine/utils/: logging.py
tests/: test_api.py  test_cli_integration.py  test_config.py  test_csv_adapter.py  test_interpreter.py  test_ladder.py  test_models.py  test_pipeline.py  test_ratings.py  test_registry.py  test_schema.py  test_simulation.py  test_smoke.py
tests/fixtures/: mini_results.csv  mini_shootouts.csv  mini_sources.yaml  mini_teams.yaml
