[project]
name = "predictor-engine"
version = "0.1.0"
description = "Competition-agnostic football prediction engine. v1 pack: FIFA World Cup 2026."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.scripts]
engine = "engine.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-pyyaml>=6.0",
    "types-tqdm>=4.66",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "C4",            # comprehensions
    "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
