[project]
name = "predictor-engine"
version = "0.1.0"
description = "Competition-agnostic football prediction engine. v1 pack: FIFA World Cup 2026."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.139.0",
    "lightgbm>=4.6.0",
    "mlflow>=3.14.0",
    "numpy>=2.0,<2.5",  # numba (shap dependency) caps numpy below 2.5
    "optuna>=4.9.0",
    "plotly>=6.8.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "scikit-learn>=1.9.0",
    "shap>=0.52",
    "streamlit>=1.58.0",
    "tqdm>=4.66",
    "uvicorn>=0.49.0",
]

[project.scripts]
engine = "engine.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
    "mypy>=1.15",
    "types-pyyaml>=6.0",
    "types-tqdm>=4.66",
    "httpx2>=2.5.0",
    "pytest-cov>=7.1.0",
]

[tool.uv]
# Lock only for the platforms we run on (Apple Silicon dev, Linux CI); shap's
# Intel-macOS constraints otherwise force prehistoric llvmlite into the lock.
environments = [
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
    "sys_platform == 'linux'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "UP",            # pyupgrade
    "B",             # bugbear
    "SIM",           # simplify
    "C4",            # comprehensions
    "RUF",
]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src"]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["sklearn.*", "lightgbm.*", "optuna.*", "mlflow.*", "shap.*", "plotly.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
# The Streamlit entrypoint is exercised manually, not unit-tested.
omit = ["*/engine/dashboard/app.py"]
